@@ -1,11 +1,13 @@
-CVS
+~$
 \.bak$
+blib
 \.bs$
-\.o$
+build
+CVS
+\.cvsignore$
 Makefile$
 Makefile\.old$
-~$
+\.o$
+\.spec$
 \.sw.$
-\.cvsignore$
-blib
-build
+\.tar\.gz$
