@@ -1,3 +1,10 @@
+2004/10/24 11:55 (-0400) rwmcfa1
+
+	* MANIFEST.SKIP: updates
+
+	* perl-Gnome2-Rsvg.spec.in: new scheme that addresses x86_64 problems
+	found by Carl Nygard
+
 2004/09/17 19:36 (+0200) kaffeetisch
 
 	* Makefile.PL, README: Depend on the stable 1.02 instead of the
